# OpenGL-Base

./: .gitignore  CMakeLists.txt  README.md  mingw-w64-x86_64.cmake
.github/workflows/: cmake-multi-platform.yml
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.cpp
src/include/: OpenSans.h  appCore.h  camera.h  common.h  core.h  delta.h  formatting.h  orbitSim.h  pipeline.h  shaders.h  stlParser.h  textures.h  window.h  windowing.h
src/resources/: pipeline.json  test.stl
src/resources/shaders/: accumulate.comp  compute_is_confusing.comp  concatenate.comp  conv2d.comp  copy.comp  decodeJPEG.comp  drawScene.frag  drawScene.vert  encodeJPEG.comp  genTestImage.comp  graphRender.frag  graphRender.vert  leakyrelu.comp  mainScene.frag  mainScene.vert  maxpooling2d.comp  pathtrace.comp  pipeline.json  postProcess.comp  postProcess.frag  postProcess.vert  raymarch.comp  relu.comp  settings.json  test.comp  upsampling2d.comp  writeAccumulationHistory.comp
src/resources/shaders - Kopie/: final.frag  pipeline.json  raymarch.comp
src/resources/shaders/lib/: intersections.glsl  utility.glsl
src/resources/shaders_waves/: genVoxelStructure.comp  pipeline.json  propagate.comp  raymarch.comp  writePropagationHistory.comp
